added basic JS functionality in survey.html; populated friendsArray

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -22,11 +22,11 @@
 
             <br>
 
-            <button class="btn btn-lg btn-primary">Take the Survey!</button>
+            <a href="/survey"><button class="btn btn-lg btn-primary">Take the Survey!</button></a>
 
         </div>
 
-        <p><a href="">API Friends List</a> | <a href="">GitHub Repo</a></p>
+        <p><a href="../api/friends">API Friends List</a> | <a href="">GitHub Repo</a></p>
 
     </div>
 
@@ -43,6 +43,7 @@
 
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
