--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -19,8 +19,10 @@
         <hr>
         <br>
         <h3>About You</h3>
+
         <h4>Name (Required)</h4>
         <input type="text" id="name" class="form-control" required>
+        <br>
         <h4>Photo Upload/URL (Required)</h4>
         <input type="text" id="photo" class="form-control" required>
         <br>
@@ -29,203 +31,156 @@
         <h4>Question 1</h4>
         <p>You are generally quite even-tempered and don't get upset easily.</p>
         <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+                <option value="1">1 - Strongly Disagree</option>
+                <option value="2">2 - Disagree</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4 - Agree</option>
+                <option value="5">5 - Strongly Agree</option>
+        </select>
 
-            </div>
+            <br>
+            <br>
+
+            <h4>Question 2</h4>
+            <p>You notice that people often feel comfortable confiding in you, even if you don't know them that well.</p>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 3</h4>
+            <p>You believe it's okay to lie sometimes if it's to spare someone's feelings and doesn't hurt anyone.</p>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 4</h4>
+            <p>Criticism is necessary for growth.</p>
+
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 5</h4>
+            <p>You worry what others might think of you.</p>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 6</h4>
+            <p>You tend to speculate on things like the future of humankind, what the statistical likelihood is of meeting aliens in our galaxy, and similar things.</p>
+
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+                <option value="1">1 - Strongly Disagree</option>
+                <option value="2">2 - Disagree</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4 - Agree</option>
+                <option value="5">5 - Strongly Agree</option>
+        </select>
+            <br>
+            <br>
+
+            <h4>Question 7</h4>
+            <p>I need to be with a lot of people to have a good time.</p>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 8</h4>
+            <p>You need to interact with people daily to be happy.</p>
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 9</h4>
+            <p>You enjoy luxurious experiences such as fine dining, expensive clothing, and resort travel.</p>
+
+            <select name="" id="q1">
+                <option value="0">Select an option</option> 
+            <option value="1">1 - Strongly Disagree</option>
+            <option value="2">2 - Disagree</option>
+            <option value="3">3 - Neutral</option>
+            <option value="4">4 - Agree</option>
+            <option value="5">5 - Strongly Agree</option>
+    </select>
+
+            <br>
+            <br>
+
+            <h4>Question 10</h4>
+            <p>You always have lots of ideas but seem to have trouble putting them into action.</p>
+
+
+            <select class="score-reader" name="" id="q1">
+                <option value="0">Select an option</option> 
+                <option value="1">1 - Strongly Disagree</option>
+                <option value="2">2 - Disagree</option>
+                <option value="3">3 - Neutral</option>
+                <option value="4">4 - Agree</option>
+                <option value="5">5 - Strongly Agree</option>
+        </select>
+
+
+            <br>
+            <br>
+
+            <button class="btn btn-lg btn-primary" id="submit">Submit</button>
+
+            <br>
+            <br>
+
         </div>
 
-        <br>
-        <br>
-
-        <h4>Question 2</h4>
-        <p>You notice that people often confide in you, even if you don't know them that well.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 3</h4>
-        <p>You believe it's okay to lie sometimes if it's to spare someone's feelings and doesn't hurt anyone.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 4</h4>
-        <p>Criticism is necessary for growth.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 5</h4>
-        <p>You worry what others might think of you.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 6</h4>
-        <p>You tend to speculate on things like the future of humankind, what the statistical likelihood is of meeting aliens in our galaxy, and similar things.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q6" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" value="1" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" value="2" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" value="3" href="#">3 - Neutral</a>
-                <a class="dropdown-item" value="4" href="#">4 - Agree</a>
-                <a class="dropdown-item" value="5" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 7</h4>
-        <p>I need to be with a lot of people to have a good time.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q7" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 8</h4>
-        <p>You need to interact with people daily to be happy.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q8" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 9</h4>
-        <p>You enjoy luxurious experiences such as fine dining, expensive clothing, and resort travel.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q9" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-        <h4>Question 10</h4>
-        <p>You always have lots of ideas but seem to have trouble putting them into action.</p>
-
-        <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="q10" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Choose one
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1 - Strongly Disagree</a>
-                <a class="dropdown-item" href="#">2 -  Disagree</a>
-                <a class="dropdown-item" href="#">3 - Neutral</a>
-                <a class="dropdown-item" href="#">4 - Agree</a>
-                <a class="dropdown-item" href="#">5 - Strongly Agree</a>
-
-            </div>
-        </div>
-
-        <br>
-        <br>
-
-    </div>
 
 
 
@@ -233,15 +188,53 @@
 
 
 
+        <!-- Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
 
 
-    <!-- Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script>
+            console.log("working");
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.0.min.js" integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
+            $("#submit").on("click", function(event) {
+                event.preventDefault();
+
+
+                var newFriend = {
+                    name: $("#name").val().trim(),
+                    image: $("#photo").val().trim(),
+                    scores: $(".score-reader").val().trim()
+                };
+
+                console.log(newFriend);
+
+                $.post("/api/friends", newFriend,
+                    function(data) {
+
+
+                        if (data) {
+                            console.log("You've submitted your information.");
+                        }
+
+                        // If a table is available... tell user they on the waiting list.
+                        else {
+                            console.log("Sorry, please try again.");
+                        }
+
+                        // Clear the form when submitting
+                        $("#name").val("");
+                        $("#photo").val("");
+                        $(".scores").val("0");
+
+                    });
+
+            });
+        </script>
+
 
 </body>
 
