--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -188,7 +188,58 @@
       <br />
       <br />
 
-      <button class="btn btn-lg btn-primary" id="submit">Submit</button>
+      <button
+        class="btn btn-lg btn-primary"
+        data-toggle="modal"
+        data-target="#exampleModal"
+        id="submit"
+      >
+        Submit
+      </button>
+
+      <!-- Modal -->
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                Your new best friend is...
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p></p>
+              >
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-secondary"
+                data-dismiss="modal"
+              >
+                Close
+              </button>
+              <button type="button" class="btn btn-primary">
+                Save changes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <br />
       <br />
@@ -228,6 +279,14 @@
         console.log(newFriend);
 
         $.post("/api/friends", newFriend, function (data) {
+          // Get bestie match
+          console.log("_________GET MATCH______");
+          console.log("Match name: " + data.name);
+          console.log("Match photo: " + data.photo);
+
+          // $("#matchName").text(besties.name);
+          // $("#matchPic").attr("src", besties.photo);
+
           // Clear the form when submitting
           $("#name").val("0");
           $("#photo").val("0");
@@ -242,21 +301,6 @@
           $("#q9").val("0");
           $("#q10").val("0");
         });
-
-        //
-
-        // newFriend.scores = [1, 2, 3, 4, 5, 1, 2, 3, 4, 5]
-        // friendsArray[0].scores[4, 5, 3, 2, 1, 4, 5, 3, 4, 4]
-
-        // position 0: Math.abs( newFriend.scores[0] - friendsArray[0].scores[0])
-
-        // function calculateCompatibility() {
-        //     var newFriendArray = newFriend.scores;
-
-        //     for (i = 0; i < newFriendArray.length; i++) {
-        //         var difference =
-        //     }
-        // }
       });
     </script>
   </body>
