--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -14,6 +14,32 @@
     <title>Survey</title>
   </head>
   <body>
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Your best match is:
+        <p id="matchName"></p>
+        <p id="matchPicture"></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
     <div class="container">
       <h1>Survey Questions</h1>
       <hr />
@@ -188,69 +214,25 @@
       <br />
       <br />
 
-      <button
-        class="btn btn-lg btn-primary"
-        data-toggle="modal"
-        data-target="#exampleModal"
-        id="submit"
-      >
-        Submit
-      </button>
 
-      <!-- Modal -->
-      <div
-        class="modal fade"
-        id="exampleModal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">
-                Your new best friend is...
-              </h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <p></p>
-              >
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Save changes
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <br />
-      <br />
-    </div>
+      <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" id="submit">
+  Submit
+</button>
 
-    <!-- jQuery -->
+<br>
+<br>
+
+<!-- jQuery -->
     <script
-      src="https://code.jquery.com/jquery-3.5.0.min.js"
-      integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ="
-      crossorigin="anonymous"
-    ></script>
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 
     <!-- <script src="./script.js" type="text/javascript"></script> -->
     <script>
@@ -284,12 +266,15 @@
           console.log("Match name: " + data.name);
           console.log("Match photo: " + data.photo);
 
-          // $("#matchName").text(besties.name);
-          // $("#matchPic").attr("src", besties.photo);
+          $("#matchName").text(data.name);
+          $("#matchPic").attr("src", data.photo);
+
+          // Show the modal with the best match
+          // $('.modal').modal();
 
           // Clear the form when submitting
-          $("#name").val("0");
-          $("#photo").val("0");
+          $("#name").val("");
+          $("#photo").val("");
           $("#q1").val("0");
           $("#q2").val("0");
           $("#q3").val("0");
